--- a/strawberry.org
+++ b/strawberry.org
@@ -17,7 +17,7 @@ Major version log:
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = "2016.06.30 16:56:54";
+      strawberry_version = "2016.06.30 16:59:04";
       mosd_initialise
       moga_initialise
       printf (": STRAWBERRY %s, main function\n", strawberry_version)
@@ -55,14 +55,14 @@ For multi-objective problems, we have a number of options.  We can use the appro
 To accomplish the latter, we consider a ranking that takes into account how good each individual objective value is within its own set of values.  If we consider a fitness 1,... for each point for each objective, and then multiply these two ranking values together, this should emphasise the end-points.
 
 #+begin_src octave :tangle strawberry_fitness.m
-  function [fit, best] = strawberry_fitness(p,nx,ny,npop)
+  function [fit, best] = strawberry_fitness(p,nx,nz,npop)
     global strawberry_fitness_method 
     [n m] = size(p);
-    debugprint (1, "fitness, nx ny m n npop", [nx, ny, m, n, npop])
+    debugprint (1, "fitness, nx nz m n npop", [nx, nz, m, n, npop])
     if m <= 0
       disp("No solutions in the population");
     endif
-    if ny == 1                    #single objective optimisation
+    if nz == 1                    #single objective optimisation
       if n-nx == 2                # two extra columns: y and constraint
                                   # violation
         indexfeasible = p(n,:) <= 0;
@@ -120,12 +120,12 @@ To accomplish the latter, we consider a ranking that takes into account how good
     else        # multi-objective case
 
       debugprint(4, "fitness: method ", strawberry_fitness_method)
-      debugprint(4, "fitness: nx ny", [nx, ny])
+      debugprint(4, "fitness: nx nz", [nx, nz])
 
       if strawberry_fitness_method == 0
         ## rank based fitness using ranking of both objectives
-        if ny == 2
-          z = p(nx+1:nx+ny,:);    #extract out the objective function values
+        if nz == 2
+          z = p(nx+1:nx+nz,:);    #extract out the objective function values
           [zz ind1] = sort(z(1,:));
           [zz ind2] = sort(z(2,:));
           rank1(ind1) = 1:m;
@@ -155,7 +155,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
         ## into feasible and infeasible solutions.
         fitindices = p(nx+1,:) < 1e19;
         ## fprintf(stderr,"%d feasible points\n", sum(fitindices))
-        [fitness pareto] = moga_fitness ( p(1:nx,fitindices), p(nx+1:nx+ny,fitindices));
+        [fitness pareto] = moga_fitness ( p(1:nx,fitindices), p(nx+1:nx+nz,fitindices));
         debugprint(3,": fitness", fitness)
         debugprint(3,": pareto.x", pareto.x)
         debugprint(3,": pareto.z", pareto.z)
@@ -200,7 +200,7 @@ We only want to add solutions to the population that are diverse, i.e. significa
 * newpopulation
 Create a random population, distributed uniformly (hopefully) throughout the domain defined by the lower and upper bounds of the optimisation variables.
 #+begin_src octave :tangle strawberry_newpopulation.m
-  function [pop, nx, ny, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained,g)
+  function [pop, nx, nz, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained,g)
     global NPROC
     nx = length(x0)
     nf = 0;
@@ -245,14 +245,14 @@ Create a random population, distributed uniformly (hopefully) throughout the dom
       pop = pop(:,pop(nx+1,:)<1e19)
     endif
     [n m] = size(pop);
-    ## each row consists of nx x values, ny y values and a feasibility indication
-    ny = n-nx-1
+    ## each row consists of nx x values, nz y values and a feasibility indication
+    nz = n-nx-1
   endfunction
 #+end_src
 * prune
 Especially for multi-objective problems, we have a problem with diversity in that the pareto set forms an elite set.  If this set has multiple copies of the same solutions, the set can grow quite large and increases the computational effort dramatically with little effect on the quality of the solutions obtained.
 #+begin_src octave :tangle strawberry_prune.m
-  function pruned = strawberry_prune (pop, nx, ny)
+  function pruned = strawberry_prune (pop, nx, nz)
     global npruned
     global strawberry_diversity_tolerance
     npop = size(pop,2);
@@ -272,8 +272,8 @@ Especially for multi-objective problems, we have a problem with diversity in tha
           ## prune one or the other.  ideally, we keep the better
           ## one.  If we cannot distinguish (in a multi-objective
           ## sense), we simply keep the one that is already there. 
-          if ! dominates(pruned(nx+1:nx+ny,j),pop(nx+1:nx+ny,i))
-            if dominates(pop(nx+1:nx+ny,i),pruned(nx+1:nx+ny,j))
+          if ! dominates(pruned(nx+1:nx+nz,j),pop(nx+1:nx+nz,i))
+            if dominates(pop(nx+1:nx+nz,i),pruned(nx+1:nx+nz,j))
               ## current solution is better, i.e. dominates, than previous
               ## one so replace
               pruned(:,j) = pop(:,i);
@@ -338,10 +338,10 @@ Especially for multi-objective problems, we have a problem with diversity in tha
 #+end_src
 * sort
 #+begin_src octave :tangle strawberry_sort.m
-  function pop = strawberry_sort (pop,nx,ny)
+  function pop = strawberry_sort (pop,nx,nz)
     [n m] = size(pop);
     ## sorting only makes sense in single criterion problems
-    if ny == 1                    # single objective optimisation
+    if nz == 1                    # single objective optimisation
       if n-nx == 2                # y + constraint violation
                                   # find feasible and infeasible sets
         feasible = pop(:, pop(n,:) <= 0);
@@ -462,14 +462,14 @@ For multi-objective optimisation, ~x~ and ~z~ will be a set of points and associ
 ** initial population
 #+begin_src octave :noweb yes :tangle strawberry.m
   if constrained
-    [phi, nx, ny, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained,g);
+    [phi, nx, nz, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained,g);
   else
-    [phi, nx, ny, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained);
+    [phi, nx, nz, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained);
   endif
-  pop = strawberry_sort (phi,nx,ny);
+  pop = strawberry_sort (phi,nx,nz);
   gen = 0;
 
-  if ny < 2
+  if nz < 2
     best = pop(:,1);
   else
     best = [];
@@ -479,12 +479,12 @@ For multi-objective optimisation, ~x~ and ~z~ will be a set of points and associ
 
   if output
     printf("| %9s |", "gen")
-    if ny > 1
-      for i=1:ny, printf(" %6sy%02d |", "", i); endfor
-      for i=1:ny, printf(" %6sy%02d |", "", i); endfor
+    if nz > 1
+      for i=1:nz, printf(" %6sy%02d |", "", i); endfor
+      for i=1:nz, printf(" %6sy%02d |", "", i); endfor
     else
       for i=1:nx; printf(" %6sx%02d |", "", i); endfor
-      for i=1:ny; printf(" %6sy%02d |", "", i); endfor
+      for i=1:nz; printf(" %6sy%02d |", "", i); endfor
       if constrained; printf(" %9s |", "c"); endif
     endif
     printf(" %9s | %9s | %9s |", "$n_f$", "CPU (s)", "Best found")
@@ -494,11 +494,11 @@ For multi-objective optimisation, ~x~ and ~z~ will be a set of points and associ
 #+end_src
 ** iterate
 #+begin_src octave :noweb yes :tangle strawberry.m
-  while gen++ < ngen && (ny > 1 || gen < bestgen+ns)
+  while gen++ < ngen && (nz > 1 || gen < bestgen+ns)
 #+end_src
 *** calculate fitness and prune
 #+begin_src octave :noweb yes :tangle strawberry.m
-  if ny > 1
+  if nz > 1
     ## remove infeasible solutions from the population
     fitindices = pop(nx+1,:) < 1e19;
     if sum(fitindices) < size(pop,2)
@@ -507,7 +507,7 @@ For multi-objective optimisation, ~x~ and ~z~ will be a set of points and associ
     endif
   endif
   ## prune the solution, removing duplicate members as they contribute nothing
-  pop = strawberry_prune (pop, nx, ny);
+  pop = strawberry_prune (pop, nx, nz);
 #+end_src
 *** rank solutions
 The fitness method is used to find the best members of the population and assign each one a ranking N \in (0,1) with higher values better than lower values.  
@@ -516,13 +516,13 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
 #+begin_src octave :noweb yes :tangle strawberry.m
   ## evaluate the fitness of the population.  For multi-objective problems,
   ## this has the side effect of returning the pareto front 
-  [N pareto] = strawberry_fitness (pop,nx,ny,size(pop,2));
+  [N pareto] = strawberry_fitness (pop,nx,nz,size(pop,2));
   ## keep track of best.  For multi-objective problems, this means keeping the pareto set
   debugprint(1, "best", best)
   debugprint(1, "pareto", pareto)
   debugprint(1, "pop(1)", pop(:,1))
-  debugprint(1, "nx, ny", [nx, ny])
-  if ny < 2 && pareto(nx+1) < best(nx+1) && norm(abs(best(1:nx)-pareto(1:nx))) > 1e-6
+  debugprint(1, "nx, nz", [nx, nz])
+  if nz < 2 && pareto(nx+1) < best(nx+1) && norm(abs(best(1:nx)-pareto(1:nx))) > 1e-6
     best = pareto;
     bestgen = gen;
     ## zzz = zfit (best (1:nx))
@@ -531,7 +531,7 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
       printf("%g ", best(1:nx));
       printf("\n");
     endif
-  elseif ny>1
+  elseif nz>1
     ## the set of points returned by the fitness function is not really
     ## a pareto set.  it is one point for each criterion.  we compare
     ## these points to the existing ones and update if necessary.
@@ -565,24 +565,24 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
     endif
     fprintf(stderr, "\r");
     printf("| %9d |", gen);
-    if ny > 1
-      printf (" %9.3g |", best(nx+1:nx+ny,1), best(nx+1:nx+ny,end))
+    if nz > 1
+      printf (" %9.3g |", best(nx+1:nx+nz,1), best(nx+1:nx+nz,end))
       printf(" %9d | %9.1f | %9d |", nfunctionevaluations, dtime, bestgen);
     else
-      printf (" %9.3g |", best(1:nx+ny))
-      if constrained; printf(" %9.3g |", best(nx+ny+1)); endif
+      printf (" %9.3g |", best(1:nx+nz))
+      if constrained; printf(" %9.3g |", best(nx+nz+1)); endif
       printf(" %8d | %8.1f | %8d |", nfunctionevaluations, dtime, bestgen);
     endif
     printf("\n");
   else
-    if ny > 1
-      ## [fitness pareto] = moga_fitness (pop(1:nx,:), pop(nx+1:nx+ny,:));
-      fprintf(stderr, "\r%30s %7d %3d/%4d %9.3g %9.3g %9.3g %9.3g", "", gen, size(best,2), length(pop), best(nx+1:nx+ny,1), best(nx+1:nx+ny,end))
+    if nz > 1
+      ## [fitness pareto] = moga_fitness (pop(1:nx,:), pop(nx+1:nx+nz,:));
+      fprintf(stderr, "\r%30s %7d %3d/%4d %9.3g %9.3g %9.3g %9.3g", "", gen, size(best,2), length(pop), best(nx+1:nx+nz,1), best(nx+1:nx+nz,end))
     else
       if constrained
-        fprintf(stderr, "\r%30s %9d [%9d] %5d %13.6e %13.6e ", "", gen, bestgen, length(pop), best(nx+ny), best(nx+ny+1));
+        fprintf(stderr, "\r%30s %9d [%9d] %5d %13.6e %13.6e ", "", gen, bestgen, length(pop), best(nx+nz), best(nx+nz+1));
       else
-        fprintf(stderr, "\r%30s %9d [%9d] %5d %8d %13.6e ", "", "", gen, bestgen, length(pop), nfunctionevaluations, best(nx+ny));
+        fprintf(stderr, "\r%30s %9d [%9d] %5d %8d %13.6e ", "", "", gen, bestgen, length(pop), nfunctionevaluations, best(nx+nz));
       endif
     endif
   endif
@@ -783,14 +783,14 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
 
   constrained = nargin > 10;    # has a constraint function been passed?
   if constrained
-    [phi, nx, ny, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained,g);
+    [phi, nx, nz, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained,g);
   else
-    [phi, nx, ny, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained);
+    [phi, nx, nz, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained);
   endif
-  pop = strawberry_sort (phi,nx,ny);
+  pop = strawberry_sort (phi,nx,nz);
   gen = 0;
 
-  if ny < 2
+  if nz < 2
     best = pop(:,1);
   else
     best = [];
@@ -800,12 +800,12 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
 
   if output
     printf("| %9s |", "gen")
-    if ny > 1
-      for i=1:ny, printf(" %6sy%02d |", "", i); endfor
-      for i=1:ny, printf(" %6sy%02d |", "", i); endfor
+    if nz > 1
+      for i=1:nz, printf(" %6sy%02d |", "", i); endfor
+      for i=1:nz, printf(" %6sy%02d |", "", i); endfor
     else
       for i=1:nx; printf(" %6sx%02d |", "", i); endfor
-      for i=1:ny; printf(" %6sy%02d |", "", i); endfor
+      for i=1:nz; printf(" %6sy%02d |", "", i); endfor
       if constrained; printf(" %9s |", "c"); endif
     endif
     printf(" %9s | %9s | %9s |", "$n_f$", "CPU (s)", "Best found")
@@ -816,7 +816,7 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
 ** COMMENT prune population, removing infeasible solutions and multiple copies
 #+name: prune
 #+begin_src octave :noweb yes
-  if ny > 1
+  if nz > 1
     ## remove infeasible solutions from the population
     fitindices = pop(nx+1,:) < 1e19;
     if sum(fitindices) < size(pop,2)
@@ -825,7 +825,7 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
     endif
   endif
   ## prune the solution, removing duplicate members as they contribute nothing
-  pop = strawberry_prune (pop, nx, ny);
+  pop = strawberry_prune (pop, nx, nz);
 #+end_src
 ** COMMENT find best members of the population
 The fitness method is used to find the best members of the population and assign each one a ranking N \in (0,1) with higher values better than lower values.  
@@ -835,13 +835,13 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
 #+begin_src octave :noweb yes
   ## evaluate the fitness of the population.  For multi-objective problems,
   ## this has the side effect of returning the pareto front 
-  [N pareto] = strawberry_fitness (pop,nx,ny,size(pop,2));
+  [N pareto] = strawberry_fitness (pop,nx,nz,size(pop,2));
   ## keep track of best.  For multi-objective problems, this means keeping the pareto set
   debugprint(1, "best", best)
   debugprint(1, "pareto", pareto)
   debugprint(1, "pop(1)", pop(:,1))
-  debugprint(1, "nx, ny", [nx, ny])
-  if ny < 2 && pareto(nx+1) < best(nx+1) && norm(abs(best(1:nx)-pareto(1:nx))) > 1e-6
+  debugprint(1, "nx, nz", [nx, nz])
+  if nz < 2 && pareto(nx+1) < best(nx+1) && norm(abs(best(1:nx)-pareto(1:nx))) > 1e-6
     best = pareto;
     bestgen = gen;
     ## zzz = zfit (best (1:nx))
@@ -850,7 +850,7 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
       printf("%g ", best(1:nx));
       printf("\n");
     endif
-  elseif ny>1
+  elseif nz>1
     ## the set of points returned by the fitness function is not really
     ## a pareto set.  it is one point for each criterion.  we compare
     ## these points to the existing ones and update if necessary.
@@ -885,24 +885,24 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
     endif
     fprintf(stderr, "\r");
     printf("| %9d |", gen);
-    if ny > 1
-      printf (" %9.3g |", best(nx+1:nx+ny,1), best(nx+1:nx+ny,end))
+    if nz > 1
+      printf (" %9.3g |", best(nx+1:nx+nz,1), best(nx+1:nx+nz,end))
       printf(" %9d | %9.1f | %9d |", nfunctionevaluations, dtime, bestgen);
     else
-      printf (" %9.3g |", best(1:nx+ny))
-      if constrained; printf(" %9.3g |", best(nx+ny+1)); endif
+      printf (" %9.3g |", best(1:nx+nz))
+      if constrained; printf(" %9.3g |", best(nx+nz+1)); endif
       printf(" %8d | %8.1f | %8d |", nfunctionevaluations, dtime, bestgen);
     endif
     printf("\n");
   else
-    if ny > 1
-      ## [fitness pareto] = moga_fitness (pop(1:nx,:), pop(nx+1:nx+ny,:));
-      fprintf(stderr, "\r%30s %7d %3d/%4d %9.3g %9.3g %9.3g %9.3g", "", gen, size(best,2), length(pop), best(nx+1:nx+ny,1), best(nx+1:nx+ny,end))
+    if nz > 1
+      ## [fitness pareto] = moga_fitness (pop(1:nx,:), pop(nx+1:nx+nz,:));
+      fprintf(stderr, "\r%30s %7d %3d/%4d %9.3g %9.3g %9.3g %9.3g", "", gen, size(best,2), length(pop), best(nx+1:nx+nz,1), best(nx+1:nx+nz,end))
     else
       if constrained
-        fprintf(stderr, "\r%30s %9d [%9d] %5d %13.6e %13.6e ", "", gen, bestgen, length(pop), best(nx+ny), best(nx+ny+1));
+        fprintf(stderr, "\r%30s %9d [%9d] %5d %13.6e %13.6e ", "", gen, bestgen, length(pop), best(nx+nz), best(nx+nz+1));
       else
-        fprintf(stderr, "\r%30s %9d [%9d] %5d %8d %13.6e ", "", "", gen, bestgen, length(pop), nfunctionevaluations, best(nx+ny));
+        fprintf(stderr, "\r%30s %9d [%9d] %5d %8d %13.6e ", "", "", gen, bestgen, length(pop), nfunctionevaluations, best(nx+nz));
       endif
     endif
   endif
